blitz.output
Terminals unused in grammar

    OP_EQUAL
    OP_EQUAL_EQUAL
    OP_NOT_EQUAL
    OP_LESS_THAN
    OP_GREATER_THAN
    OP_LESS_EQUAL
    OP_GREATER_EQUAL
    COMMA


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: declaration
    5          | assignment
    6          | if_statement
    7          | while_statement
    8          | read_statement
    9          | write_statement
   10          | stop_statement

   11 declaration: KEYWORD_INT IDENTIFIER SEMICOLON
   12            | KEYWORD_NUM IDENTIFIER SEMICOLON

   13 assignment: IDENTIFIER OP_ASSIGN expression SEMICOLON

   14 if_statement: KEYWORD_IF LPAREN expression RPAREN LBRACE statement_list RBRACE
   15             | KEYWORD_IF LPAREN expression RPAREN LBRACE statement_list RBRACE KEYWORD_ELSE LBRACE statement_list RBRACE

   16 while_statement: KEYWORD_WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE

   17 read_statement: KEYWORD_READ LPAREN IDENTIFIER RPAREN SEMICOLON

   18 write_statement: KEYWORD_WRITE LPAREN expression RPAREN SEMICOLON

   19 stop_statement: KEYWORD_STOP SEMICOLON

   20 expression: IDENTIFIER
   21           | NUMBER
   22           | expression OP_PLUS expression
   23           | expression OP_MINUS expression
   24           | expression OP_MULTIPLY expression
   25           | expression OP_DIVIDE expression
   26           | LPAREN expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <num> (258) 21
    IDENTIFIER <str> (259) 11 12 13 17 20
    KEYWORD_INT (260) 11
    KEYWORD_NUM (261) 12
    KEYWORD_IF (262) 14 15
    KEYWORD_ELSE (263) 15
    KEYWORD_WHILE (264) 16
    KEYWORD_STOP (265) 19
    KEYWORD_READ (266) 17
    KEYWORD_WRITE (267) 18
    OP_ASSIGN (268) 13
    OP_EQUAL (269)
    OP_EQUAL_EQUAL (270)
    OP_NOT_EQUAL (271)
    OP_LESS_THAN (272)
    OP_GREATER_THAN (273)
    OP_LESS_EQUAL (274)
    OP_GREATER_EQUAL (275)
    OP_PLUS (276) 22
    OP_MINUS (277) 23
    OP_MULTIPLY (278) 24
    OP_DIVIDE (279) 25
    SEMICOLON (280) 11 12 13 17 18 19
    COMMA (281)
    LPAREN (282) 14 15 16 17 18 26
    RPAREN (283) 14 15 16 17 18 26
    LBRACE (284) 14 15 16
    RBRACE (285) 14 15 16


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    program <node> (32)
        on left: 1
        on right: 0
    statement_list <node> (33)
        on left: 2 3
        on right: 1 3 14 15 16
    statement <node> (34)
        on left: 4 5 6 7 8 9 10
        on right: 2 3
    declaration <node> (35)
        on left: 11 12
        on right: 4
    assignment <node> (36)
        on left: 13
        on right: 5
    if_statement <node> (37)
        on left: 14 15
        on right: 6
    while_statement <node> (38)
        on left: 16
        on right: 7
    read_statement <node> (39)
        on left: 17
        on right: 8
    write_statement <node> (40)
        on left: 18
        on right: 9
    stop_statement <node> (41)
        on left: 19
        on right: 10
    expression <node> (42)
        on left: 20 21 22 23 24 25 26
        on right: 13 14 15 16 18 22 23 24 25 26


State 0

    0 $accept: • program $end

    IDENTIFIER     shift, and go to state 1
    KEYWORD_INT    shift, and go to state 2
    KEYWORD_NUM    shift, and go to state 3
    KEYWORD_IF     shift, and go to state 4
    KEYWORD_WHILE  shift, and go to state 5
    KEYWORD_STOP   shift, and go to state 6
    KEYWORD_READ   shift, and go to state 7
    KEYWORD_WRITE  shift, and go to state 8

    program          go to state 9
    statement_list   go to state 10
    statement        go to state 11
    declaration      go to state 12
    assignment       go to state 13
    if_statement     go to state 14
    while_statement  go to state 15
    read_statement   go to state 16
    write_statement  go to state 17
    stop_statement   go to state 18


State 1

   13 assignment: IDENTIFIER • OP_ASSIGN expression SEMICOLON

    OP_ASSIGN  shift, and go to state 19


State 2

   11 declaration: KEYWORD_INT • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 20


State 3

   12 declaration: KEYWORD_NUM • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 21


State 4

   14 if_statement: KEYWORD_IF • LPAREN expression RPAREN LBRACE statement_list RBRACE
   15             | KEYWORD_IF • LPAREN expression RPAREN LBRACE statement_list RBRACE KEYWORD_ELSE LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 22


State 5

   16 while_statement: KEYWORD_WHILE • LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 23


State 6

   19 stop_statement: KEYWORD_STOP • SEMICOLON

    SEMICOLON  shift, and go to state 24


State 7

   17 read_statement: KEYWORD_READ • LPAREN IDENTIFIER RPAREN SEMICOLON

    LPAREN  shift, and go to state 25


State 8

   18 write_statement: KEYWORD_WRITE • LPAREN expression RPAREN SEMICOLON

    LPAREN  shift, and go to state 26


State 9

    0 $accept: program • $end

    $end  shift, and go to state 27


State 10

    1 program: statement_list •
    3 statement_list: statement_list • statement

    IDENTIFIER     shift, and go to state 1
    KEYWORD_INT    shift, and go to state 2
    KEYWORD_NUM    shift, and go to state 3
    KEYWORD_IF     shift, and go to state 4
    KEYWORD_WHILE  shift, and go to state 5
    KEYWORD_STOP   shift, and go to state 6
    KEYWORD_READ   shift, and go to state 7
    KEYWORD_WRITE  shift, and go to state 8

    $default  reduce using rule 1 (program)

    statement        go to state 28
    declaration      go to state 12
    assignment       go to state 13
    if_statement     go to state 14
    while_statement  go to state 15
    read_statement   go to state 16
    write_statement  go to state 17
    stop_statement   go to state 18


State 11

    2 statement_list: statement •

    $default  reduce using rule 2 (statement_list)


State 12

    4 statement: declaration •

    $default  reduce using rule 4 (statement)


State 13

    5 statement: assignment •

    $default  reduce using rule 5 (statement)


State 14

    6 statement: if_statement •

    $default  reduce using rule 6 (statement)


State 15

    7 statement: while_statement •

    $default  reduce using rule 7 (statement)


State 16

    8 statement: read_statement •

    $default  reduce using rule 8 (statement)


State 17

    9 statement: write_statement •

    $default  reduce using rule 9 (statement)


State 18

   10 statement: stop_statement •

    $default  reduce using rule 10 (statement)


State 19

   13 assignment: IDENTIFIER OP_ASSIGN • expression SEMICOLON

    NUMBER      shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31

    expression  go to state 32


State 20

   11 declaration: KEYWORD_INT IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 33


State 21

   12 declaration: KEYWORD_NUM IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 34


State 22

   14 if_statement: KEYWORD_IF LPAREN • expression RPAREN LBRACE statement_list RBRACE
   15             | KEYWORD_IF LPAREN • expression RPAREN LBRACE statement_list RBRACE KEYWORD_ELSE LBRACE statement_list RBRACE

    NUMBER      shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31

    expression  go to state 35


State 23

   16 while_statement: KEYWORD_WHILE LPAREN • expression RPAREN LBRACE statement_list RBRACE

    NUMBER      shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31

    expression  go to state 36


State 24

   19 stop_statement: KEYWORD_STOP SEMICOLON •

    $default  reduce using rule 19 (stop_statement)


State 25

   17 read_statement: KEYWORD_READ LPAREN • IDENTIFIER RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 37


State 26

   18 write_statement: KEYWORD_WRITE LPAREN • expression RPAREN SEMICOLON

    NUMBER      shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31

    expression  go to state 38


State 27

    0 $accept: program $end •

    $default  accept


State 28

    3 statement_list: statement_list statement •

    $default  reduce using rule 3 (statement_list)


State 29

   21 expression: NUMBER •

    $default  reduce using rule 21 (expression)


State 30

   20 expression: IDENTIFIER •

    $default  reduce using rule 20 (expression)


State 31

   26 expression: LPAREN • expression RPAREN

    NUMBER      shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31

    expression  go to state 39


State 32

   13 assignment: IDENTIFIER OP_ASSIGN expression • SEMICOLON
   22 expression: expression • OP_PLUS expression
   23           | expression • OP_MINUS expression
   24           | expression • OP_MULTIPLY expression
   25           | expression • OP_DIVIDE expression

    OP_PLUS      shift, and go to state 40
    OP_MINUS     shift, and go to state 41
    OP_MULTIPLY  shift, and go to state 42
    OP_DIVIDE    shift, and go to state 43
    SEMICOLON    shift, and go to state 44


State 33

   11 declaration: KEYWORD_INT IDENTIFIER SEMICOLON •

    $default  reduce using rule 11 (declaration)


State 34

   12 declaration: KEYWORD_NUM IDENTIFIER SEMICOLON •

    $default  reduce using rule 12 (declaration)


State 35

   14 if_statement: KEYWORD_IF LPAREN expression • RPAREN LBRACE statement_list RBRACE
   15             | KEYWORD_IF LPAREN expression • RPAREN LBRACE statement_list RBRACE KEYWORD_ELSE LBRACE statement_list RBRACE
   22 expression: expression • OP_PLUS expression
   23           | expression • OP_MINUS expression
   24           | expression • OP_MULTIPLY expression
   25           | expression • OP_DIVIDE expression

    OP_PLUS      shift, and go to state 40
    OP_MINUS     shift, and go to state 41
    OP_MULTIPLY  shift, and go to state 42
    OP_DIVIDE    shift, and go to state 43
    RPAREN       shift, and go to state 45


State 36

   16 while_statement: KEYWORD_WHILE LPAREN expression • RPAREN LBRACE statement_list RBRACE
   22 expression: expression • OP_PLUS expression
   23           | expression • OP_MINUS expression
   24           | expression • OP_MULTIPLY expression
   25           | expression • OP_DIVIDE expression

    OP_PLUS      shift, and go to state 40
    OP_MINUS     shift, and go to state 41
    OP_MULTIPLY  shift, and go to state 42
    OP_DIVIDE    shift, and go to state 43
    RPAREN       shift, and go to state 46


State 37

   17 read_statement: KEYWORD_READ LPAREN IDENTIFIER • RPAREN SEMICOLON

    RPAREN  shift, and go to state 47


State 38

   18 write_statement: KEYWORD_WRITE LPAREN expression • RPAREN SEMICOLON
   22 expression: expression • OP_PLUS expression
   23           | expression • OP_MINUS expression
   24           | expression • OP_MULTIPLY expression
   25           | expression • OP_DIVIDE expression

    OP_PLUS      shift, and go to state 40
    OP_MINUS     shift, and go to state 41
    OP_MULTIPLY  shift, and go to state 42
    OP_DIVIDE    shift, and go to state 43
    RPAREN       shift, and go to state 48


State 39

   22 expression: expression • OP_PLUS expression
   23           | expression • OP_MINUS expression
   24           | expression • OP_MULTIPLY expression
   25           | expression • OP_DIVIDE expression
   26           | LPAREN expression • RPAREN

    OP_PLUS      shift, and go to state 40
    OP_MINUS     shift, and go to state 41
    OP_MULTIPLY  shift, and go to state 42
    OP_DIVIDE    shift, and go to state 43
    RPAREN       shift, and go to state 49


State 40

   22 expression: expression OP_PLUS • expression

    NUMBER      shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31

    expression  go to state 50


State 41

   23 expression: expression OP_MINUS • expression

    NUMBER      shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31

    expression  go to state 51


State 42

   24 expression: expression OP_MULTIPLY • expression

    NUMBER      shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31

    expression  go to state 52


State 43

   25 expression: expression OP_DIVIDE • expression

    NUMBER      shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31

    expression  go to state 53


State 44

   13 assignment: IDENTIFIER OP_ASSIGN expression SEMICOLON •

    $default  reduce using rule 13 (assignment)


State 45

   14 if_statement: KEYWORD_IF LPAREN expression RPAREN • LBRACE statement_list RBRACE
   15             | KEYWORD_IF LPAREN expression RPAREN • LBRACE statement_list RBRACE KEYWORD_ELSE LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 54


State 46

   16 while_statement: KEYWORD_WHILE LPAREN expression RPAREN • LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 55


State 47

   17 read_statement: KEYWORD_READ LPAREN IDENTIFIER RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 56


State 48

   18 write_statement: KEYWORD_WRITE LPAREN expression RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 57


State 49

   26 expression: LPAREN expression RPAREN •

    $default  reduce using rule 26 (expression)


State 50

   22 expression: expression • OP_PLUS expression
   22           | expression OP_PLUS expression •
   23           | expression • OP_MINUS expression
   24           | expression • OP_MULTIPLY expression
   25           | expression • OP_DIVIDE expression

    OP_MULTIPLY  shift, and go to state 42
    OP_DIVIDE    shift, and go to state 43

    $default  reduce using rule 22 (expression)


State 51

   22 expression: expression • OP_PLUS expression
   23           | expression • OP_MINUS expression
   23           | expression OP_MINUS expression •
   24           | expression • OP_MULTIPLY expression
   25           | expression • OP_DIVIDE expression

    OP_MULTIPLY  shift, and go to state 42
    OP_DIVIDE    shift, and go to state 43

    $default  reduce using rule 23 (expression)


State 52

   22 expression: expression • OP_PLUS expression
   23           | expression • OP_MINUS expression
   24           | expression • OP_MULTIPLY expression
   24           | expression OP_MULTIPLY expression •
   25           | expression • OP_DIVIDE expression

    $default  reduce using rule 24 (expression)


State 53

   22 expression: expression • OP_PLUS expression
   23           | expression • OP_MINUS expression
   24           | expression • OP_MULTIPLY expression
   25           | expression • OP_DIVIDE expression
   25           | expression OP_DIVIDE expression •

    $default  reduce using rule 25 (expression)


State 54

   14 if_statement: KEYWORD_IF LPAREN expression RPAREN LBRACE • statement_list RBRACE
   15             | KEYWORD_IF LPAREN expression RPAREN LBRACE • statement_list RBRACE KEYWORD_ELSE LBRACE statement_list RBRACE

    IDENTIFIER     shift, and go to state 1
    KEYWORD_INT    shift, and go to state 2
    KEYWORD_NUM    shift, and go to state 3
    KEYWORD_IF     shift, and go to state 4
    KEYWORD_WHILE  shift, and go to state 5
    KEYWORD_STOP   shift, and go to state 6
    KEYWORD_READ   shift, and go to state 7
    KEYWORD_WRITE  shift, and go to state 8

    statement_list   go to state 58
    statement        go to state 11
    declaration      go to state 12
    assignment       go to state 13
    if_statement     go to state 14
    while_statement  go to state 15
    read_statement   go to state 16
    write_statement  go to state 17
    stop_statement   go to state 18


State 55

   16 while_statement: KEYWORD_WHILE LPAREN expression RPAREN LBRACE • statement_list RBRACE

    IDENTIFIER     shift, and go to state 1
    KEYWORD_INT    shift, and go to state 2
    KEYWORD_NUM    shift, and go to state 3
    KEYWORD_IF     shift, and go to state 4
    KEYWORD_WHILE  shift, and go to state 5
    KEYWORD_STOP   shift, and go to state 6
    KEYWORD_READ   shift, and go to state 7
    KEYWORD_WRITE  shift, and go to state 8

    statement_list   go to state 59
    statement        go to state 11
    declaration      go to state 12
    assignment       go to state 13
    if_statement     go to state 14
    while_statement  go to state 15
    read_statement   go to state 16
    write_statement  go to state 17
    stop_statement   go to state 18


State 56

   17 read_statement: KEYWORD_READ LPAREN IDENTIFIER RPAREN SEMICOLON •

    $default  reduce using rule 17 (read_statement)


State 57

   18 write_statement: KEYWORD_WRITE LPAREN expression RPAREN SEMICOLON •

    $default  reduce using rule 18 (write_statement)


State 58

    3 statement_list: statement_list • statement
   14 if_statement: KEYWORD_IF LPAREN expression RPAREN LBRACE statement_list • RBRACE
   15             | KEYWORD_IF LPAREN expression RPAREN LBRACE statement_list • RBRACE KEYWORD_ELSE LBRACE statement_list RBRACE

    IDENTIFIER     shift, and go to state 1
    KEYWORD_INT    shift, and go to state 2
    KEYWORD_NUM    shift, and go to state 3
    KEYWORD_IF     shift, and go to state 4
    KEYWORD_WHILE  shift, and go to state 5
    KEYWORD_STOP   shift, and go to state 6
    KEYWORD_READ   shift, and go to state 7
    KEYWORD_WRITE  shift, and go to state 8
    RBRACE         shift, and go to state 60

    statement        go to state 28
    declaration      go to state 12
    assignment       go to state 13
    if_statement     go to state 14
    while_statement  go to state 15
    read_statement   go to state 16
    write_statement  go to state 17
    stop_statement   go to state 18


State 59

    3 statement_list: statement_list • statement
   16 while_statement: KEYWORD_WHILE LPAREN expression RPAREN LBRACE statement_list • RBRACE

    IDENTIFIER     shift, and go to state 1
    KEYWORD_INT    shift, and go to state 2
    KEYWORD_NUM    shift, and go to state 3
    KEYWORD_IF     shift, and go to state 4
    KEYWORD_WHILE  shift, and go to state 5
    KEYWORD_STOP   shift, and go to state 6
    KEYWORD_READ   shift, and go to state 7
    KEYWORD_WRITE  shift, and go to state 8
    RBRACE         shift, and go to state 61

    statement        go to state 28
    declaration      go to state 12
    assignment       go to state 13
    if_statement     go to state 14
    while_statement  go to state 15
    read_statement   go to state 16
    write_statement  go to state 17
    stop_statement   go to state 18


State 60

   14 if_statement: KEYWORD_IF LPAREN expression RPAREN LBRACE statement_list RBRACE •
   15             | KEYWORD_IF LPAREN expression RPAREN LBRACE statement_list RBRACE • KEYWORD_ELSE LBRACE statement_list RBRACE

    KEYWORD_ELSE  shift, and go to state 62

    $default  reduce using rule 14 (if_statement)


State 61

   16 while_statement: KEYWORD_WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE •

    $default  reduce using rule 16 (while_statement)


State 62

   15 if_statement: KEYWORD_IF LPAREN expression RPAREN LBRACE statement_list RBRACE KEYWORD_ELSE • LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 63


State 63

   15 if_statement: KEYWORD_IF LPAREN expression RPAREN LBRACE statement_list RBRACE KEYWORD_ELSE LBRACE • statement_list RBRACE

    IDENTIFIER     shift, and go to state 1
    KEYWORD_INT    shift, and go to state 2
    KEYWORD_NUM    shift, and go to state 3
    KEYWORD_IF     shift, and go to state 4
    KEYWORD_WHILE  shift, and go to state 5
    KEYWORD_STOP   shift, and go to state 6
    KEYWORD_READ   shift, and go to state 7
    KEYWORD_WRITE  shift, and go to state 8

    statement_list   go to state 64
    statement        go to state 11
    declaration      go to state 12
    assignment       go to state 13
    if_statement     go to state 14
    while_statement  go to state 15
    read_statement   go to state 16
    write_statement  go to state 17
    stop_statement   go to state 18


State 64

    3 statement_list: statement_list • statement
   15 if_statement: KEYWORD_IF LPAREN expression RPAREN LBRACE statement_list RBRACE KEYWORD_ELSE LBRACE statement_list • RBRACE

    IDENTIFIER     shift, and go to state 1
    KEYWORD_INT    shift, and go to state 2
    KEYWORD_NUM    shift, and go to state 3
    KEYWORD_IF     shift, and go to state 4
    KEYWORD_WHILE  shift, and go to state 5
    KEYWORD_STOP   shift, and go to state 6
    KEYWORD_READ   shift, and go to state 7
    KEYWORD_WRITE  shift, and go to state 8
    RBRACE         shift, and go to state 65

    statement        go to state 28
    declaration      go to state 12
    assignment       go to state 13
    if_statement     go to state 14
    while_statement  go to state 15
    read_statement   go to state 16
    write_statement  go to state 17
    stop_statement   go to state 18


State 65

   15 if_statement: KEYWORD_IF LPAREN expression RPAREN LBRACE statement_list RBRACE KEYWORD_ELSE LBRACE statement_list RBRACE •

    $default  reduce using rule 15 (if_statement)
